--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 cachelib==0.9.0
-click==8.1.3
-Flask==2.2.2
+certifi==2022.9.14
+click==8.0.4
+Flask==2.1.3
 Flask-Session==0.4.0
-importlib-metadata==5.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
+importlib-metadata==4.11.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
 MarkupSafe==2.1.1
-Werkzeug==2.2.2
-zipp==3.8.1
+pip==22.2.2
+setuptools==63.4.1
+Werkzeug==2.0.3
+wheel==0.37.1
+zipp==3.8.0
